[gd_scene load_steps=3 format=2]

[ext_resource path="res://duplication method/SaveSystem1.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[node name="SaveGame" type="Node2D"]
script = ExtResource( 1 )

[node name="Godot" type="Sprite" parent="."]
position = Vector2( 44.4975, 304.066 )
texture = ExtResource( 2 )

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Random" type="Button" parent="Control"]
anchor_top = 15.0
anchor_bottom = 15.0
margin_left = 20.0
margin_top = -58.0001
margin_right = 220.0
margin_bottom = -13.0001
text = "random"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Save" type="Button" parent="Control"]
anchor_top = 15.0
anchor_bottom = 15.0
margin_left = 282.0
margin_top = -58.0001
margin_right = 482.0
margin_bottom = -13.0001
text = "save"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Load" type="Button" parent="Control"]
anchor_top = 15.0
anchor_bottom = 15.0
margin_left = 540.0
margin_top = -57.0001
margin_right = 740.0
margin_bottom = -12.0001
text = "load"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GoBack" type="Button" parent="Control"]
anchor_top = 15.0
anchor_bottom = 15.0
margin_left = 797.0
margin_top = -58.0001
margin_right = 997.0
margin_bottom = -13.0001
text = "go back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Position" type="Label" parent="Control"]
anchor_left = 12.94
anchor_right = 12.94
margin_left = -107.627
margin_top = 47.6055
margin_right = 103.373
margin_bottom = 85.6055
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveFile" type="Label" parent="Control"]
anchor_left = 11.959
anchor_right = 11.959
margin_left = -80.0017
margin_top = 4.23785
margin_right = 79.9983
margin_bottom = 37.2379
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Control/Random" to="." method="_on_Random_pressed"]
[connection signal="pressed" from="Control/Save" to="." method="_on_Save_pressed"]
[connection signal="pressed" from="Control/Load" to="." method="_on_Load_pressed"]
[connection signal="pressed" from="Control/GoBack" to="." method="_on_GoBack_pressed"]
